--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -4,12 +4,12 @@
       <div class="field">
         <span class="label">Дней</span>
         <div class="figure">
-          <span class="value" data-value="days">11</span>
+          <span id="hour" class="value" data-value="days">11</span>
         </div>
       </div>
 
       <div class="field">
-          <span class="label">Часов</span>
+          <span class="label min">Часов</span>
           <div class="figure">
             <span class="value" data-value="hours">11</span>
           </div>
